--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "subx-demo-todomvc",
+  "name": "use-proxy-demo-todomvc",
   "description": "React & SubX TodoMVC Example, SubX is the next generation state container",
   "version": "3.0.0",
   "license": "MIT",
@@ -10,14 +10,13 @@
     "test": "jest -w 1"
   },
   "dependencies": {
+    "@tylerlong/use-proxy": "^0.3.0",
     "classnames": "^2.2.6",
     "director": "^1.2.8",
     "pluralize": "^8.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-subx": "^0.7.0",
     "rxjs": "^6.5.5",
-    "subx": "^0.9.8",
     "todomvc-app-css": "^2.3.0",
     "uuid": "^8.1.0"
   },
@@ -49,7 +48,9 @@
     ]
   },
   "jest": {
-    "setupFilesAfterEnv": ["./test/setup.js"]
+    "setupFilesAfterEnv": [
+      "./test/setup.js"
+    ]
   },
   "yarn-upgrade-all": {
     "ignore": [
