--- a/package.json
+++ b/package.json
@@ -5,44 +5,44 @@
   "license": "MIT",
   "private": "true",
   "scripts": {
-    "start": "webpack-dev-server --open --progress --colors",
-    "release": "webpack --progress --colors --config webpack.config.prod.babel.js",
+    "serve": "webpack serve --progress --open",
+    "release": "webpack --progress --config webpack.config.prod.babel.js",
     "lint": "standard",
     "test": "jest -w 1"
   },
   "dependencies": {
     "@tylerlong/use-proxy": "^0.6.2",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "director": "^1.2.8",
     "lodash": "^4.17.21",
     "pluralize": "^8.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "rxjs": "^6.5.5",
-    "todomvc-app-css": "^2.3.0",
-    "uuid": "^8.1.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rxjs": "^7.3.0",
+    "todomvc-app-css": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@babel/register": "^7.10.1",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.15.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^26.0.1",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.0.1",
-    "ramda": "^0.27.0",
-    "react-test-renderer": "^16.13.1",
-    "standard": "^14.3.4",
-    "style-loader": "^1.2.1",
+    "babel-jest": "^27.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.1.0",
+    "ramda": "^0.27.1",
+    "react-test-renderer": "^17.0.2",
+    "standard": "^16.0.3",
+    "style-loader": "^3.2.1",
     "timeout-as-promise": "^1.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-strip-block": "^0.2.0",
-    "yarn-upgrade-all": "^0.5.2"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.0",
+    "webpack-strip-block": "^0.3.0",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "standard": {
     "ignore": [
