--- a/package.json
+++ b/package.json
@@ -10,34 +10,28 @@
     "test": "jest -w 1"
   },
   "dependencies": {
-    "@tylerlong/use-proxy": "^0.6.2",
+    "@tylerlong/use-proxy": "^0.6.3",
     "classnames": "^2.3.1",
     "director": "^1.2.8",
+    "hyperid": "^2.3.1",
     "lodash": "^4.17.21",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rxjs": "^7.3.0",
-    "todomvc-app-css": "^2.4.1",
-    "uuid": "^8.3.2"
+    "todomvc-app-css": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/register": "^7.15.3",
-    "@types/node": "^16.7.9",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.1.0",
-    "babel-loader": "^8.2.2",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.7.10",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "css-loader": "^6.2.0",
     "gts": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
-    "ramda": "^0.27.1",
     "react-test-renderer": "^17.0.2",
     "style-loader": "^3.2.1",
-    "timeout-as-promise": "^1.0.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
