--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "outDir": "build"
+    "outDir": "build",
+    "lib": ["DOM"],
+    "esModuleInterop": true,
+    "jsx": "react",
   },
   "include": [
-    "src/**/*.ts"
-  ]
+    "src/**/*.ts",
+    "src/**/*.tsx",
+  ],
 }
