--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "4.0.0",
   "license": "MIT",
   "private": "true",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "serve": "webpack serve --progress --open",
-    "release": "webpack --progress --config webpack.config.prod.babel.js",
+    "release": "webpack --progress --config webpack.config.prod.ts",
     "test": "jest -w 1"
   },
   "dependencies": {
@@ -27,6 +30,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "buffer": "^6.0.3",
     "css-loader": "^6.2.0",
     "gts": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
@@ -39,7 +43,6 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0",
-    "webpack-strip-block": "^0.3.0",
     "yarn-upgrade-all": "^0.5.4"
   },
   "jest": {
