--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "use-proxy-demo-todomvc",
-  "description": "React & useProxy TodoMVC Example",
+  "name": "manate-demo-todomvc",
+  "description": "React & manate TodoMVC Example",
   "version": "4.0.0",
   "license": "MIT",
   "private": "true",
@@ -13,11 +13,11 @@
     "test": "jest -w 1"
   },
   "dependencies": {
-    "@tylerlong/use-proxy": "^0.7.0",
     "class-transformer": "^0.4.0",
     "classnames": "^2.3.1",
     "hyperid": "^2.3.1",
     "lodash": "^4.17.21",
+    "manate": "^0.2.1",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
