--- a/package.json
+++ b/package.json
@@ -13,37 +13,37 @@
     "test": "jest -w 1"
   },
   "dependencies": {
-    "@tylerlong/use-proxy": "^0.7.0",
-    "class-transformer": "^0.4.0",
-    "classnames": "^2.3.1",
-    "hyperid": "^2.3.1",
+    "@tylerlong/use-proxy": "0.7.0",
+    "class-transformer": "^0.5.1",
+    "classnames": "^2.3.2",
+    "hyperid": "^3.1.1",
     "lodash": "^4.17.21",
     "pluralize": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rxjs": "^7.3.0",
-    "todomvc-app-css": "^2.4.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.8.0",
+    "todomvc-app-css": "^2.4.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^16.9.1",
+    "@types/lodash": "^4.14.192",
+    "@types/node": "^18.15.11",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "buffer": "^6.0.3",
-    "css-loader": "^6.2.0",
-    "gts": "^3.1.0",
-    "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.1.1",
-    "react-test-renderer": "^17.0.2",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
-    "yarn-upgrade-all": "^0.5.4"
+    "css-loader": "^6.7.3",
+    "gts": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
+    "react-test-renderer": "^18.2.0",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
